--- a/templates/contact/success.html.twig
+++ b/templates/contact/success.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
 <h1>bonjour {{nom}}</h1>
-nous avons bien reçu votre message et nous vous recpntacterons à {{email}}
+nous avons bien reçu votre message et nous vous recontacterons à {{email}}
 
 {% endblock %}
