ajout boostrap et fontawesome

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Hello ContactController!{% endblock %}
 
 {% block body %}
-<h1>contactez-nous</h1>
+<h1>contactez-nous<i class="far fa-address-card"></i> </h1>
+
+
 {{form(formulaire)}}
 {% endblock %}
