--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('profile/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('profile_index') }}">back to list</a>
+    <a href="{{ path('profile_show') }}">back to profile</a>
 
-    {{ include('profile/_delete_form.html.twig') }}
+   
 {% endblock %}
