--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -15,20 +15,14 @@
                 <th>Email</th>
                 <td>{{ user.email }}</td>
             </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
+            
+            
         </tbody>
     </table>
 
-    <a href="{{ path('profile_index') }}">back to list</a>
+    
 
-    <a href="{{ path('profile_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('profile_edit') }}">edit</a>
 
-    {{ include('profile/_delete_form.html.twig') }}
+    
 {% endblock %}
