--- a/templates/admin_produit/index.html.twig
+++ b/templates/admin_produit/index.html.twig
@@ -9,6 +9,7 @@
         <thead>
             <tr>
                 <th>Id</th>
+                 <th>Image</th>
                 <th>Nom</th>
                 <th>Description</th>
                 <th>Prix</th>
@@ -20,10 +21,13 @@
         {% for produit in produits %}
             <tr>
                 <td>{{ produit.id }}</td>
+                <td>
+                    <img src="{{asset('uploads/' ~ produit.imageFilename)}}" />
+                </td>
                 <td>{{ produit.nom }}</td>
                 <td>{{ produit.description }}</td>
                 <td>{{ produit.prix }}</td>
-                <td>{{ produit.image }}</td>
+                <td>{{ produit.imageFilename }}</td>
                 <td>
                     <a href="{{ path('admin_produit_show', {'id': produit.id}) }}">show</a>
                     <a href="{{ path('admin_produit_edit', {'id': produit.id}) }}">edit</a>
