--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,8 @@
 {% block title %}Home lotus_sacre{% endblock %}
 
 {% block body %}
-Home lotus_sacre home
+Bienvenue!
+
+<img src={{asset('media/h-61fbe2bb700dd.jpg')}} width="100%">
+
 {% endblock %}
