--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,28 +16,10 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href={{path('home')}}>Home </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href={{path('contact')}}>contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href={{path('app_register')}}>inscription</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href={{path('app_login')}}>connexion</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+
+        {{include("/security/navbar.html.twig")}}
+
+
         <div class="container">
             {% block body %}{% endblock %}
         </div>
