--- a/templates/catalogue/show.html.twig
+++ b/templates/catalogue/show.html.twig
@@ -10,14 +10,8 @@
             <tr>
                 <th>Id</th>
                 <td>{{ produit.id }}</td>
-            </tr>   
+            </tr>
             <tr>
-                <th>Image</th>
-                <td>
-                    <img src= {{asset('uploads/' ~ produit.imageFilename)}} width="100%" />
-                </td>
-            </tr> 
-            <tr> 
                 <th>Nom</th>
                 <td>{{ produit.nom }}</td>
             </tr>
@@ -30,15 +24,12 @@
                 <td>{{ produit.prix }}</td>
             </tr>
             <tr>
-                <th>Image</th>
+                <th>ImageFilename</th>
                 <td>{{ produit.imageFilename }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('admin_produit_index') }}">back to list</a>
+    <a href="{{ path('catalogue_index') }}">back to list</a>
 
-    <a href="{{ path('admin_produit_edit', {'id': produit.id}) }}">edit</a>
-
-    {{ include('admin_produit/_delete_form.html.twig') }}
 {% endblock %}
