--- a/templates/security/navbar.html.twig
+++ b/templates/security/navbar.html.twig
@@ -1,18 +1,46 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Lotus Sacré</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+    <!--lien de navigation pour un visiteur-->
+      <!--lien 1-->
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href={{path("home")}}>Home </a>
       </li>
+      <!--lien 2-->
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href={{path("catalogue_index")}}>Catalogue</a>
       </li>
+      <!--lien 3-->
+      <li class="nav-item">
+        <a class="nav-link" href={{path("contact")}}>Contact</a>
+      </li>
+       <!--lien 4-->
+      <li class="nav-item">
+        <a class="nav-link" href={{path("app_register")}}>Inscription</a> 
+      </li>
+       <!--lien 5-->
+      <li class="nav-item">
+        <a class="nav-link" href={{path("app_login")}}>Connexion</a>
+      </li>
+ <!--lien de navigation pour un utilisateur -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+          Espace utilisateur
+        </a> 
+        <div class= "dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class= "dropdown-item" href={{path("profile_show")}}>Mon profil</a>
+          <a class= "dropdown-item" href={{path("profile_article_index")}}>Mes articles</a>
+        </div>
+      </li>
+
+    <!--lien de navigation pour un administrateur connecté-->
       {% if is_granted('ROLE_ADMIN') %}
+      <!--lien 1-->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
           espace administrateur
@@ -27,13 +55,10 @@
           <a class="dropdown-item" href="{{ path('admin_produit_index')}}">gestion des produits</a>
          
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#"></a>
         </div>
       </li>
        {% endif %}
-      <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
-      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
