en cours panier

--- a/templates/catalogue/index.html.twig
+++ b/templates/catalogue/index.html.twig
@@ -24,7 +24,7 @@
                 <td>{{ produit.description }}</td>
                 <td>{{ produit.prix }}</td>
                 <td>
-                     <img src="{{asset('uploads/' ~ produit.ImageFilename )}}"/>
+                     <img src="{{asset('uploads/' ~ produit.imageFilename )}}"/>
                 
                 </td>
                 <td>
