paiementService en cours

--- a/templates/catalogue/index.html.twig
+++ b/templates/catalogue/index.html.twig
@@ -29,6 +29,7 @@
                 </td>
                 <td>
                     <a href="{{ path('catalogue_show', {'id': produit.id}) }}">show</a>
+                    <a href="{{ path('cart_add', {'id': produit.id}) }}">buy</a>
                    
                 </td>
             </tr>
