--- a/templates/security/navbar.html.twig
+++ b/templates/security/navbar.html.twig
@@ -15,6 +15,10 @@
       <li class="nav-item">
         <a class="nav-link" href={{path("catalogue_index")}}>Catalogue</a>
       </li>
+      <!--lien 2-->
+      <li class="nav-item">
+        <a class="nav-link" href={{path("cart_index")}}>panier</a>
+      </li>
       <!--lien 3-->
       <li class="nav-item">
         <a class="nav-link" href={{path("contact")}}>Contact</a>
@@ -45,9 +49,9 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
           espace administrateur
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">i
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{{ path('admin_article_index')}}">gestion des articles</a>
-          <a class="dropdown-item" href="{{ path('admin_categorie_index')}}">gestion des produits</a>
+          <a class="dropdown-item" href="{{ path('admin_categorie_index')}}">gestion des categories</a>
           <a class="dropdown-item" href="{{ path('admin_commande_index')}}">gestion des commandes</a>
           <a class="dropdown-item" href="{{ path('admin_commentaire_index')}}">gestion des commentaires</a>
           <a class="dropdown-item" href="{{ path('admin_detail_commande_index')}}">gestion de detail des commandes</a>
