--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -27,6 +27,9 @@
 
 </table>
 
+ <a href="/payment"><button>payer</button></a> 
+ <a href="/cart/clear"><button>annuler</button></a>
+
 {% endif %}
 
 
