--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,6 +8,7 @@ Bienvenue!
 <img src={{asset('media/h-61fbe8449b738.jpg')}} width="25%">
 <img src={{asset('media/h-61fbecf8e4fc8.jpg')}} width="25%">
 <img src={{asset('media/h-61fbe2bb700dd.jpg')}} width="25%">
+<img src={{asset('media/a600d08f237d83c8db600faa4e3256cf.jpg')}} width="50%">
 
 
 {% endblock %}
