--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
 <h1>contactez-nous<i class="far fa-address-card"></i> </h1>
+<style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
 
 {{form(formulaire)}}
