--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -1,6 +1,13 @@
 {% extends 'base.html.twig' %}
  
 {% block body %}
+<style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
     <script>
         (function () {
             const stripe = Stripe('pk_test_51KRHXgJh9aVwNMU0LUOnvN5O0WyPm9f1byVeeqVmvH89D6jXcSrnN3AOkNNl0giEcfhAgWrEbLc4U65UXdG6XtrE00Ei4TiwLT');
