--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>User</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     <table class="table">
         <tbody>
