--- a/templates/profile_article/index.html.twig
+++ b/templates/profile_article/index.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Article index</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     <table class="table">
         <thead>
