--- a/templates/profile_article/new.html.twig
+++ b/templates/profile_article/new.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Create new Article</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('profile_article/_form.html.twig') }}
 
