--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Register</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
