--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,6 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
 {% if cart.elements %}
 
