--- a/templates/contact/success.html.twig
+++ b/templates/contact/success.html.twig
@@ -5,5 +5,12 @@
 {% block body %}
 <h1>bonjour {{nom}}</h1>
 nous avons bien reçu votre message et nous vous recontacterons à {{email}}
+<style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
 {% endblock %}
