--- a/templates/security/navbar.html.twig
+++ b/templates/security/navbar.html.twig
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color:#742771;">
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color:#742771";>
   <a class="navbar-brand" href="#">Lotus Sacré</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
