--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Utilisateur</h1>
     <style>
 
         body{
@@ -29,7 +29,7 @@
 
     
 
-    <a href="{{ path('profile_edit') }}">edit</a>
+    <a href="{{ path('profile_edit') }}"></a>
 
     
 {% endblock %}
