--- a/templates/admin_article/index.html.twig
+++ b/templates/admin_article/index.html.twig
@@ -3,7 +3,14 @@
 {% block title %}Article index{% endblock %}
 
 {% block body %}
-    <h1>Article index</h1>
+    <h1>Mes articles</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     <table class="table">
         <thead>
@@ -23,8 +30,8 @@
                 <td>{{ article.contenu }}</td>
                 <td>{{ article.motCles }}</td>
                 <td>
-                    <a href="{{ path('admin_article_show', {'id': article.id}) }}">show</a>
-                    <a href="{{ path('admin_article_edit', {'id': article.id}) }}">edit</a>
+                    <a href="{{ path('admin_article_show', {'id': article.id}) }}"><button>Détails</button></a> 
+                    <a href="{{ path('admin_article_edit', {'id': article.id}) }}"><button>Modifier</button></a> 
                 </td>
             </tr>
         {% else %}
@@ -35,5 +42,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_article_new') }}">Create new</a>
+    <a href="{{ path('admin_article_new') }}"><button>Créer un nouvel article</button></a> 
 {% endblock %}
