--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -3,11 +3,18 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Modifier l'utilisateur</h1>
+     <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('profile/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('profile_show') }}">back to profile</a>
+    <a href="{{ path('profile_show') }}"><button>Retour</button></a>
 
    
 {% endblock %}
