--- a/templates/profile_article/edit.html.twig
+++ b/templates/profile_article/edit.html.twig
@@ -3,11 +3,18 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
-    <h1>Edit Article</h1>
+    <h1>Modifier l'article</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('profile_article/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('profile_article_index') }}">back to list</a>
+    <a href="{{ path('profile_article_index') }}"><button>Retour</button></a>
 
     {{ include('profile_article/_delete_form.html.twig') }}
 {% endblock %}
