--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1>Inscription</h1>
     <style>
 
         body{
@@ -15,10 +15,11 @@
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'mot de passe'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        
+        <a href="submit" class = "btn"><button>enregistrer</button></a>
     {{ form_end(registrationForm) }}
 {% endblock %}
