front end finition

--- a/templates/admin_article/new.html.twig
+++ b/templates/admin_article/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Article{% endblock %}
+{% block title %}Nouvel article{% endblock %}
 
 {% block body %}
-    <h1>Create new Article</h1>
+    <h1>Créer un nouvel article</h1>
      <style>
 
         body{
