--- a/templates/admin_commande/edit.html.twig
+++ b/templates/admin_commande/edit.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Edit Commande</h1>
+     <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('admin_commande/_form.html.twig', {'button_label': 'Update'}) }}
 
