--- a/templates/admin_article/edit.html.twig
+++ b/templates/admin_article/edit.html.twig
@@ -14,7 +14,7 @@
 
     {{ include('admin_article/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('admin_article_index') }}">back to list</a>
+    <a href="{{ path('admin_article_index') }}"><button>Retour</button></a>
 
     {{ include('admin_article/_delete_form.html.twig') }}
 {% endblock %}
