--- a/templates/admin_categorie/edit.html.twig
+++ b/templates/admin_categorie/edit.html.twig
@@ -3,11 +3,18 @@
 {% block title %}Edit Categorie{% endblock %}
 
 {% block body %}
-    <h1>Edit Categorie</h1>
+    <h1>modifier la Categorie</h1>
+     <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('admin_categorie/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('admin_categorie_index') }}">back to list</a>
+    <a href="{{ path('admin_categorie_index') }}"><button>Modifier</button></a> 
 
     {{ include('admin_categorie/_delete_form.html.twig') }}
 {% endblock %}
