--- a/templates/admin_categorie/index.html.twig
+++ b/templates/admin_categorie/index.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Categorie index</h1>
+      <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     <table class="table">
         <thead>
@@ -19,8 +26,8 @@
                 <td>{{ categorie.id }}</td>
                 <td>{{ categorie.nom }}</td>
                 <td>
-                    <a href="{{ path('admin_categorie_show', {'id': categorie.id}) }}">show</a>
-                    <a href="{{ path('admin_categorie_edit', {'id': categorie.id}) }}">edit</a>
+                    <a href="{{ path('admin_categorie_show', {'id': categorie.id}) }}"><button>Détails</button></a> 
+                    <a href="{{ path('admin_categorie_edit', {'id': categorie.id}) }}"><button>Modifier</button></a> 
                 </td>
             </tr>
         {% else %}
@@ -31,5 +38,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_categorie_new') }}">Create new</a>
+    <a href="{{ path('admin_categorie_new') }}"><button>Créer une nouvelle catégorie</button></a> 
 {% endblock %}
