--- a/templates/admin_categorie/new.html.twig
+++ b/templates/admin_categorie/new.html.twig
@@ -1,11 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Categorie{% endblock %}
+{% block title %}Nouvelle catégorie{% endblock %}
 
 {% block body %}
-    <h1>Create new Categorie</h1>
+    <h1>Nouvelle catégorie</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('admin_categorie/_form.html.twig') }}
 
-    <a href="{{ path('admin_categorie_index') }}">back to list</a>
+    <a href="{{ path('admin_categorie_index') }}"><button>Retour à la liste</button></a> 
 {% endblock %}
