--- a/templates/admin_categorie/show.html.twig
+++ b/templates/admin_categorie/show.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Categorie</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     <table class="table">
         <tbody>
@@ -18,9 +25,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_categorie_index') }}">back to list</a>
+    <a href="{{ path('admin_categorie_index') }}"><button>Retour à la liste</button></a> 
 
-    <a href="{{ path('admin_categorie_edit', {'id': categorie.id}) }}">edit</a>
+    <a href="{{ path('admin_categorie_edit', {'id': categorie.id}) }}"><button>Modifier</button></a> 
 
     {{ include('admin_categorie/_delete_form.html.twig') }}
 {% endblock %}
