--- a/templates/admin_commande/new.html.twig
+++ b/templates/admin_commande/new.html.twig
@@ -1,11 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Commande{% endblock %}
+{% block title %}Nouvelle commande{% endblock %}
 
 {% block body %}
-    <h1>Create new Commande</h1>
+    <h1>Créer une nouvelle commande</h1>
+     <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('admin_commande/_form.html.twig') }}
 
-    <a href="{{ path('admin_commande_index') }}">back to list</a>
+    <a href="{{ path('admin_commande_index') }}"><button>Retour à la liste</button></a> 
 {% endblock %}
