--- a/templates/admin_commentaire/edit.html.twig
+++ b/templates/admin_commentaire/edit.html.twig
@@ -4,10 +4,17 @@
 
 {% block body %}
     <h1>Edit Commentaire</h1>
+     <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('admin_commentaire/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('admin_commentaire_index') }}">back to list</a>
+    <a href="{{ path('admin_commentaire_index') }}"><button>Retour à la liste</button></a> 
 
     {{ include('admin_commentaire/_delete_form.html.twig') }}
 {% endblock %}
