--- a/templates/admin_commentaire/show.html.twig
+++ b/templates/admin_commentaire/show.html.twig
@@ -4,6 +4,14 @@
 
 {% block body %}
     <h1>Commentaire</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
+
 
     <table class="table">
         <tbody>
@@ -18,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_commentaire_index') }}">back to list</a>
+    <a href="{{ path('admin_commentaire_index') }}"><button>Retour à la liste</button></a> 
 
-    <a href="{{ path('admin_commentaire_edit', {'id': commentaire.id}) }}">edit</a>
+    <a href="{{ path('admin_commentaire_edit', {'id': commentaire.id}) }}"><button>modifier</button></a> 
 
     {{ include('admin_commentaire/_delete_form.html.twig') }}
 {% endblock %}
