--- a/templates/admin_detail_commande/edit.html.twig
+++ b/templates/admin_detail_commande/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('admin_detail_commande/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('admin_detail_commande_index') }}">back to list</a>
+    <a href="{{ path('admin_detail_commande_index') }}"><button>Retour à la liste</button></a> 
 
     {{ include('admin_detail_commande/_delete_form.html.twig') }}
 {% endblock %}
