--- a/templates/admin_detail_commande/new.html.twig
+++ b/templates/admin_detail_commande/new.html.twig
@@ -4,8 +4,15 @@
 
 {% block body %}
     <h1>Create new DetailCommande</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     {{ include('admin_detail_commande/_form.html.twig') }}
 
-    <a href="{{ path('admin_detail_commande_index') }}">back to list</a>
+    <a href="{{ path('admin_detail_commande_index') }}"><button>Retour à la liste</button></a> 
 {% endblock %}
