--- a/templates/admin_paiement/show.html.twig
+++ b/templates/admin_paiement/show.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Paiement</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     <table class="table">
         <tbody>
@@ -22,9 +29,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_paiement_index') }}">back to list</a>
+    <a href="{{ path('admin_paiement_index') }}"><button>Retour à la liste</button></a> 
 
-    <a href="{{ path('admin_paiement_edit', {'id': paiement.id}) }}">edit</a>
+    <a href="{{ path('admin_paiement_edit', {'id': paiement.id}) }}"><button>Modifier</button></a> 
 
     {{ include('admin_paiement/_delete_form.html.twig') }}
 {% endblock %}
