--- a/templates/admin_produit/index.html.twig
+++ b/templates/admin_produit/index.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Produit index</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     <table class="table">
         <thead>
@@ -29,8 +36,8 @@
                 <td>{{ produit.prix }}</td>
                 <td>{{ produit.imageFilename }}</td>
                 <td>
-                    <a href="{{ path('admin_produit_show', {'id': produit.id}) }}">show</a>
-                    <a href="{{ path('admin_produit_edit', {'id': produit.id}) }}">edit</a>
+                    <a href="{{ path('admin_produit_show', {'id': produit.id}) }}"><button>Détails</button></a> 
+                    <a href="{{ path('admin_produit_edit', {'id': produit.id}) }}"><button>Modifier</button></a> 
                 </td>
             </tr>
         {% else %}
@@ -41,5 +48,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_produit_new') }}">Create new</a>
+    <a href="{{ path('admin_produit_new') }}"><button>Création</button></a> 
 {% endblock %}
