--- a/templates/admin_produit/show.html.twig
+++ b/templates/admin_produit/show.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Produit</h1>
+    <style>
+
+        body{
+         background-color:#69a238;  
+           
+    }
+    </style>
 
     <table class="table">
         <tbody>
@@ -36,9 +43,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_produit_index') }}">back to list</a>
+    <a href="{{ path('admin_produit_index') }}"><button>Retour</button></a> 
 
-    <a href="{{ path('admin_produit_edit', {'id': produit.id}) }}">edit</a>
+    <a href="{{ path('admin_produit_edit', {'id': produit.id}) }}"><button>Modifier</button></a> 
 
     {{ include('admin_produit/_delete_form.html.twig') }}
 {% endblock %}
